--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <meta name="description" content="CivClicker: Build a Civilisation In Your Browser" />
 
     <!-- JS utilities -->
-    <script type="application/javascript" src="public/lz-string.js" async="async"></script>
-    <script type="application/javascript" src="public/jsutils.js" async="async"></script>
+    <script type="application/javascript" src="public/lz-string.js"></script>
+    <script type="application/javascript" src="public/jsutils.js"></script>
     <!-- Polyfill from https://developer.mozilla.org/en-US/docs/Web/API/Element.classList -->
-    <script type="application/javascript" src="public/classList.js" async="async"></script>
+    <script type="application/javascript" src="public/classList.js"></script>
     <!-- Main program -->
     <script type="application/javascript" src="public/civclicker.js" defer="defer"></script>
 </head>
