--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
             <div class='unit10'><button id="spawn10button" onmousedown="spawn(10)">Recruit 10 Workers</button><span class="cost"><span id="workerCost10">200</span> food</span><span class="note">: Recruit 10 new workers</span></div>
             <div class='unit100'><button id="spawn100button" onmousedown="spawn(100)">Recruit 100 Workers</button><span class="cost"><span id="workerCost100">2000</span> food</span><span class="note">: Recruit 100 new workers</span></div>
             <div class='unit1000'><button id="spawn1000button" onmousedown="spawn(1000)">Recruit 1000 Workers</button><span class="cost"><span id="workerCost1000">20000</span> food</span><span class="note">: Recruit 1000 new workers</span></div>
+            <div class='unit1000'><button id="spawn10000button" onmousedown="spawn(10000)">Recruit 10000 Workers</button><span class="cost"><span id="workerCost10000">200000</span> food</span><span class="note">: Recruit 10000 new workers</span></div>
             <div class='unitInfinity'><button id="spawnMaxbutton" onmousedown="spawn(Infinity)">Recruit <span id="workerNumMax">Max</span> Workers</button><span class="cost"><span id="workerCostMax"></span> food</span><span class="note">: Recruit as many new workers as possible</span></div>
             <div id="customSpawnQuantity"><button id="spawnCustomButton" onmousedown="spawn('custom')">Recruit Workers</button><input id="spawnCustomQty" type="number" min="1" step="1" value="1" />
             </div>
